[BUGFIX] Fix the size of contents in small screens
Reduce the padding in header and fixes the footer to avoid overlappings

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,12 +6,14 @@ div.jumbotron{
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1c2d41",endColorstr="#233448",GradientType=1);
     color:white;
     max-height:148px;
+    padding-top: 15px;
 }
 
 div#main-content {
     position:absolute;
     left:0px;
     right:0px;
+    padding-bottom:70px;
 }
 
 textarea{
@@ -21,7 +23,7 @@ textarea{
 
 footer{
     margin-top: 24px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     background: rgb(28,45,65);
     background: -moz-linear-gradient(180deg, rgba(28,45,65,1) 0%, rgba(35,52,72,1) 100%);
